# node-matlab-engine

./: .gitignore  CMakeLists.txt  add_matlab_to_path.js  index.html  index.js  install.js  main.js  package-lock.json  package.json
cmake/: FindNodeJS.cmake
lib/: add_matlab_to_path.js  find_command.js
src/: CMakeLists.txt  binding.cpp  matlab-engine-js.cpp  matlab-engine-js.h  matlab-engine.cpp  matlab-engine.h  matlab-mxarray-utils.h  matlab-mxarray.cpp  matlab-mxarray.h  matlab_engine.cpp  matlab_engine.h  napi_utils.h
test/: test.js  test_multisession.js
